# zipf-fixed

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: zipf_bench.rs
src/: fast.rs  fixed.rs  lib.rs
