[package]
name = "zipf-fixed"
version = "0.2.0"
edition = "2021"
authors = [
     "Ron Kuris (@rkuris) <ron.kuris@avalabs.org>",
]
description = "A faster zipf distribution that uses more memory"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["algorithms"]
rust-version = "1.63"

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.0"
thiserror = "2.0.11"
